srun.err
wandb: Currently logged in as: eirikreiestad (eirikreiestad-ntnu) to https://api.wandb.ai. Use `wandb login --relogin` to force relogin
  File "/var/slurm_spool/job21123635/slurm_script", line 12
    if [ ! -f scripts/idun/clean.sh ]; then
         ^
SyntaxError: invalid syntax
WARNING:root:No non final next states, consider increasing batch size.
WARNING:root:No non final next states, consider increasing batch size.
WARNING:root:No non final next states, consider increasing batch size.
WARNING:root:No non final next states, consider increasing batch size.
WARNING:root:No non final next states, consider increasing batch size.
WARNING:root:No non final next states, consider increasing batch size.
